# glados-rpi

./: CMakeLists.txt  package.xml
.github/workflows/: build.yml
launch/: arm_bringup.launch.py
msg/: RgbLed.msg  ServoCmd.msg
robot_arm_bringup/: bt_node.py  rgb_led_node.py  servo_node.py  sound_node.py  web_node.py
